--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@
 
     <!-- ---------------------------- Modal carrito ---------------------------- -->
     <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable">
+        <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <div id="cartTotal"></div>
+                    <div id="cartTotal" class="d-flex col-12 justify-content-end"></div>
                     <div>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Seguir comprando</button>
                         <button type="button" class="btn btn-primary">Finalizar compra</button>
