--- a/frontend/pages/categorias/pulseras.html
+++ b/frontend/pages/categorias/pulseras.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ------------------------------ Bootstrap ------------------------------ -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <!-- ------------------------------- jQuery -------------------------------- -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- --------------------------------- CSS --------------------------------- -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Mesa Redonda</title>
 </head>
 
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" id="nav">
         <div class="container-fluid">
             <a class="navbar-brand logo" href="#">
-                <img src="./img/mesa-redonda-logo-primary.svg" alt="logo de la marca">
+                <img src="../../img/mesa-redonda-logo-primary.svg" alt="logo de la marca">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,30 +81,6 @@
 
     <!-- -------------------------------- MAIN --------------------------------- -->
     <main>
-        <!-- ------------------------------ carrousel ------------------------------ -->
-        <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./img/slider/slider-1png.png" class="d-block w-100 caroussel-img" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/slider/banner-2.jpg" class="d-block w-100 caroussel-img" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/slider/banner-3.jpg" class="d-block w-100 caroussel-img" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
         <!-- ----------------------------- categories ------------------------------ -->
         <div class="container-fluid">
             <div class="row d-flex justify-content-center add-info categories  categories-margin">            
@@ -153,16 +129,11 @@
                 </div>
             </div>
         </div>
-        <!-- ---------------------------- sale products ---------------------------- -->
-        <div class="container-fluid overflow-hidden">
-            <div class="row justify-content-evenly dark-section" id="onSale">
-                <h3><span class="section-title text-light">productos en oferta</span></h3>
-            </div>
-        </div>
+
         <!-- ----------------------------- most selled ----------------------------- -->
         <div class="conteiner-fluid overflow-hidden">
             <div class="row justify-content-evenly" id="onTendency">
-                <h3><span class="section-title">más vendidos</span></h3>
+                <h3><span class="section-title">pulseras</span></h3>
             </div>
         </div>
         <!-- ------------------------ payment data section ------------------------- -->
@@ -202,18 +173,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- --------------------------- newsletter form --------------------------- -->
-        <div class="container-fluid newsletter-section">
-            <form action="" class="newsletter-form">
-                <div class="">
-                    <h3><span class="section-title">Recibí nuestras ofertas!</span></h3>
-                </div>
-                <div class="input-group mb-3">
-                    <input type="email" class="form-control" id="newsletterInputEmail" aria-describedby="emailInput" placeholder="email">
-                    <button type="submit" class="btn btn-primary" id="emailInput">Submit</button>
-                </div>
-            </form>
         </div>
     </main>
 
@@ -305,9 +264,7 @@
     <!-- ----------------------------- Product.js ------------------------------ -->
     <script src="./scripts/Prduct.js"></script>
     <!-- ------------------------------- main.js ------------------------------- -->
-    <script src="./scripts/main.js"></script>
-    <!-- ------------------------------- cart.js ------------------------------- -->
-    <script src="./scripts/cart.js"></script>
+    <script src="../../scripts/pages.js"></script>
 </body>
 
 </html>
