--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
     <!-- --------------------------------- nav --------------------------------- -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" id="nav">
         <div class="container-fluid">
-            <a class="navbar-brand logo" href="#">
+            <a class="navbar-brand logo" href="./index.html">
                 <img src="./img/mesa-redonda-logo-primary.svg" alt="logo de la marca">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -65,9 +65,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="cartModalBody">
-                    <div id="cartProductList">
-                        El carrito se encuentra vació
-                    </div>
+                    <div id="cartProductList"></div>
                 </div>
                 <div class="modal-footer">
                     <div id="cartTotal" class="d-flex col-12 justify-content-end"></div>
@@ -303,12 +301,13 @@
     </footer>
     <!-- ---------------------------- bootstrap js ----------------------------- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- ----------------------------- Product.js ------------------------------ -->
-    <script src="./scripts/Prduct.js"></script>
-    <!-- ------------------------------- main.js ------------------------------- -->
-    <script src="./scripts/main.js"></script>
-    <!-- ------------------------------- cart.js ------------------------------- -->
-    <script src="./scripts/cart.js"></script>
+    <!-- ---------------------------- variables.js ----------------------------- -->
+    <script src="./scripts/variables.js"></script>
+    <!-- ----------------------------- classes.js ------------------------------ -->
+    <script src="./scripts/classes.js"></script>
+    <!-- ------------------------------ index.js ------------------------------- -->
+    <script src="./scripts/index.js"></script>
+
 </body>
 
 </html>
