--- a/frontend/pages/purchase.html
+++ b/frontend/pages/purchase.html
@@ -29,7 +29,7 @@
     <!-- --------------------------------- nav --------------------------------- -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" id="nav">
         <div class="container-fluid">
-            <a class="navbar-brand logo" href="#">
+            <a class="navbar-brand logo" href="../index.html">
                 <img src="../img/mesa-redonda-logo-primary.svg" alt="logo de la marca">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sobre nosotros</a>
@@ -72,24 +72,25 @@
                 <div class="modal-footer">
                     <div id="cartTotal" class="d-flex col-12 justify-content-end"></div>
                     <div>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Seguir
-                            comprando</button>
+                        <a href="../index.html" class="btn btn-secondary">Seguir comprando</a>
                         <button type="button" class="btn btn-primary">Finalizar compra</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- -------------------------------- MAIN --------------------------------- -->
     <main>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row" id="purchase">
                 <h3><span class="section-title">Productos en carrito</span></h3>
-                
             </div>
-            <div class="modal-footer">
-                <div id="cartTotal" class="d-flex col-12 justify-content-end"></div>
-                <div>
-                    <a class="btn btn-secondary" href="../index.html">Seguir comprando</a>
+            <div class="row">
+                <div id="purchaseTotal" class="col d-flex justify-content-end"></div>
+            </div>
+            <div class="row">
+                <div class="col d-flex justify-content-end">
+                    <a type="button"class="btn btn-secondary" href="../index.html" target="_self">Seguir comprando</a>
                     <button type="button" class="btn btn-primary" id="finishPurchase">Finalizar compra</button>
                 </div>
             </div>
@@ -184,12 +185,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <!-- ----------------------------- Product.js ------------------------------ -->
-    <script src="../scripts/Prduct.js"></script>
-    <!-- ------------------------------- main.js ------------------------------- -->
-    <script src="../scripts/pages.js"></script>
-    <!-- ------------------------------- cart.js ------------------------------- -->
-    <script src="../scripts/cart.js"></script>
+    <!-- ---------------------------- variables.js ----------------------------- -->
+    <script src="../scripts/variables.js"></script>
+    <!-- ----------------------------- classes.js ------------------------------ -->
+    <script src="../scripts/classes.js"></script>
+    <!-- ----------------------------- purchase.js ----------------------------- -->
+    <script src="../scripts/pages/purchase.js"></script>
 </body>
 
 </html>
