--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
     </div>
     <!-- --------------------------------- nav --------------------------------- -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" id="nav">
-        <div class="container-fluid">
+        <div class="container-fluid" id="navDiv">
             <a class="navbar-brand logo" href="./index.html">
                 <img src="./img/mesa-redonda-logo-primary.svg" alt="logo de la marca">
             </a>
@@ -37,15 +37,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav" id="navUl">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre nosotros</a>
+                        <a class="nav-link" href="./pages/login.html">Ingresar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ofertas</a>
+                        <a class="nav-link" href="./pages/signup.html">Crear cuenta</a>
                     </li>
                 </ul>
             </div>
