add_purchase and remove_purchase functions completed in main.py

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,44 +106,44 @@
         </div>
         <!-- ----------------------------- categories ------------------------------ -->
         <div class="container-fluid">
-            <div class="row d-flex justify-content-center add-info categories  categories-margin">            
+            <div class="row d-flex justify-content-center add-info categories categories-margin">            
                 <h3><span class="section-title">Categorias</span></h3>
-                <div class="col-md-12 col-xl-4 d-flex">
+                <div class="col-md-12 col-xl-4 d-flex animation">
                     <div class="row align-items-center container">
                         <div class="col-12 col-sm-9">
                             <h4><span class="upper">Pulseras</span></h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-xl-4 d-flex">
+                <div class="col-md-12 col-xl-4 d-flex animation">
                     <div class="row align-items-center container">
                         <div class="col-12 col-sm-9">
                             <h4><span class="upper">Collares</span></h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-xl-4 d-flex">
+                <div class="col-md-12 col-xl-4 d-flex animation">
                     <div class="row align-items-center container">
                         <div class="col-12 col-sm-9">
                             <h4><span class="upper">Rosarios</span></h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-xl-4 d-flex">
+                <div class="col-md-12 col-xl-4 d-flex animation">
                     <div class="row align-items-center container">
                         <div class="col-12 col-sm-9">
                             <h4><span class="upper">Cinturones</span></h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-xl-4 d-flex">
+                <div class="col-md-12 col-xl-4 d-flex animation">
                     <div class="row align-items-center container">
                         <div class="col-12 col-sm-9">
                             <h4><span class="upper">Anillos</span></h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-xl-4 d-flex">
+                <div class="col-md-12 col-xl-4 d-flex animation">
                     <div class="row align-items-center container">
                         <div class="col-12 col-sm-9">
                             <h4><span class="upper">Ofertas</span></h4>
