--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -90,7 +90,7 @@
                 <div class="mb-3">
                     <input type="email" class="form-control" id="loginEmail" aria-describedby="emailInput" placeholder="email">
                     <input type="password" class="form-control" id="loginPassword" aria-describedby="passwordInput" placeholder="Contraseña">
-                    <button type="submit" class="btn btn-primary" id="loginButton">Submit</button>
+                    <button type="submit" class="btn btn-primary" id="loginButton">Ingresar</button>
                 </div>
             </form>
         </div>
