--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -92,7 +92,7 @@
                     <input type="email" class="form-control" id="signupEmail" aria-describedby="emailInput" placeholder="email">
                     <input type="password" class="form-control" id="signupPassword" aria-describedby="passwordInput" placeholder="Contraseña">
                     <input type="password" class="form-control" id="signupPasswordConfirm" aria-describedby="passwordInputConfirm" placeholder="Repetir contraseña">
-                    <button type="submit" class="btn btn-primary" id="signupButton">Submit</button>
+                    <button type="submit" class="btn btn-primary" id="signupButton">Crear cuenta</button>
                 </div>
             </form>
         </div>
